# RAG-AS-SERVICE

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/agents/: __init__.py  crew.py  data_ingestion_agent.py  embedding_agent.py  evaluation_agent.py  retrieval_agent.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  chromadb_client.py  models.py  neo4j_client.py  session.py
backend/rag/: __init__.py  chunking.py  embedding.py  entity_extractor.py  generator.py  graph_retriever.py  retriever.py
backend/routers/: __init__.py  chat.py  documents.py  knowledge_graph.py  settings.py
backend/services/: __init__.py  chat_service.py  document_service.py
docs/: Agent_Workflow.md  Agentic_Code_Generation_Workflow.md  CLAUDE_CODE_MASTER_PROMPT.md  Deployment_Guide.md  Development_Roadmap.md  Project_Overview.md  System_Folder_Structure.md  Technical_Architecture.md  software_stack.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: ChatMessage.tsx  FileUpload.tsx  Sidebar.tsx  SourceCard.tsx  StatusBadge.tsx
scripts/: setup.sh
