[tool.poetry]
name = "openagentrag-backend"
version = "0.1.0"
description = "Self-hostable agentic RAG platform backend"
authors = ["OpenAgentRAG Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
langchain = "^0.1.0"
langchain-community = "^0.0.16"
langchain-ollama = "^0.0.1"
langchain-chroma = "^0.1.0"
crewai = "^0.1.0"
crewai-tools = "^0.1.0"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.0"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.3"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
